src/objects/Account/fields/Account_Alerts__c.field-meta.xml
<CustomField>
    <fullName>Account_Alerts__c</fullName>
    <label>Account Alerts</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>