src/objects/Account/fields/Account_Key__c.field-meta.xml
<CustomField>
    <fullName>Account_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Stores a concatenated string of Source System and Source System Id, which is an essential key used in data integration with the MDR.</description>
    <externalId>true</externalId>
    <label>Account Key</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>