src/objects/Account/fields/Account_Name_Chinese__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Chinese__c</fullName>
    <label>Account Name (Alternative)</label>
    <length>250</length>
    <type>Text</type>
</CustomField>