src/objects/Account/fields/Account_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Account_Sales_Rep__c</fullName>
    <label>Account Sales Rep</label>
    <length>255</length>
    <type>Text</type>
</CustomField>