src/objects/Account/fields/Account_Source_TEXT__c.field-meta.xml
<CustomField>
    <fullName>Account_Source_TEXT__c</fullName>
    <label>Account Source TEXT</label>
    <length>100</length>
    <type>Text</type>
</CustomField>