src/objects/Account/fields/AdvMat_Unique_Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>AdvMat_Unique_Customer_Code__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>AdvMat Unique Customer Code</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>