src/objects/Account/fields/Amada_Lasers__c.field-meta.xml
<CustomField>
    <fullName>Amada_Lasers__c</fullName>
    <description>Count of Active Lasers with the System of Amada</description>
    <inlineHelpText>Count of In Use, Idle, and Spare Amada Lasers</inlineHelpText>
    <label># Amada Lasers</label>
    <summaryFilterItems>
        <field>Equipment_Owned__c.System__c</field>
        <operation>equals</operation>
        <value>AMADA</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Equipment_Owned__c.Laser_Status__c</field>
        <operation>equals</operation>
        <value>In Use, Idle, Spare</value>
    </summaryFilterItems>
    <summaryForeignKey>Equipment_Owned__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>