src/objects/Account/fields/AR_Amount__c.field-meta.xml
<CustomField>
    <fullName>AR_Amount__c</fullName>
    <label>AR Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>