src/objects/Account/fields/AR_Amount_Rollup__c.field-meta.xml
<CustomField>
    <fullName>AR_Amount_Rollup__c</fullName>
    <defaultValue>0</defaultValue>
    <label>AR Amount Rollup</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>