src/objects/Account/fields/Berlin_Account__c.field-meta.xml
<CustomField>
    <fullName>Berlin_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Berlin Account</label>
    <type>Checkbox</type>
</CustomField>