src/objects/Account/fields/Billing_Region__c.field-meta.xml
<CustomField>
    <fullName>Billing_Region__c</fullName>
    <label>Billing Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>