src/objects/Account/fields/Business_Segment__c.field-meta.xml
<CustomField>
    <fullName>Business_Segment__c</fullName>
    <label>Business Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SAX/DIV</fullName>
            </value>
            <value>
                <fullName>Singapore</fullName>
            </value>
            <value>
                <fullName>Suisse</fullName>
            </value>
            <value>
                <fullName>SUZ</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>Italia</fullName>
            </value>
            <value>
                <fullName>Benelux</fullName>
            </value>
            <value>
                <fullName>HIGHYAG</fullName>
            </value>
            <value>
                <fullName>eV</fullName>
            </value>
            <value>
                <fullName>AdvMat</fullName>
            </value>
            <value>
                <fullName>CORP</fullName>
            </value>
            <value>
                <fullName>DEU</fullName>
            </value>
            <value>
                <fullName>JPN</fullName>
            </value>
            <value>
                <fullName>Korea</fullName>
            </value>
            <value>
                <fullName>Suwtech</fullName>
            </value>
            <value>
                <fullName>Laser Enterprise</fullName>
            </value>
            <value>
                <fullName>M Cubed</fullName>
            </value>
            <value>
                <fullName>Taiwan</fullName>
            </value>
            <value>
                <fullName>Epiworks</fullName>
            </value>
            <value>
                <fullName>Photop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>