src/objects/Account/fields/Buy_Location__c.field-meta.xml
<CustomField>
    <fullName>Buy_Location__c</fullName>
    <label>Buy Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>