src/objects/Account/fields/Changed_Global_Parent_Old_Owner__c.field-meta.xml
<CustomField>
    <fullName>Changed_Global_Parent_Old_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Changed Global Parent Old Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>