src/objects/Account/fields/Cluster__c.field-meta.xml
<CustomField>
    <fullName>Cluster__c</fullName>
    <label>Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aftermarket - End User</fullName>
            </value>
            <value>
                <fullName>Aftermarket - Reseller</fullName>
            </value>
            <value>
                <fullName>Aftermarket - Service Co.</fullName>
            </value>
            <value>
                <fullName>Defense</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Space</fullName>
            </value>
            <value>
                <fullName>Materials</fullName>
            </value>
            <value>
                <fullName>Intracompany</fullName>
            </value>
            <value>
                <fullName>University</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Resonator Only</fullName>
            </value>
            <value>
                <fullName>System Integrator</fullName>
            </value>
            <value>
                <fullName>Beam Delivery/Components</fullName>
            </value>
            <value>
                <fullName>Service Only/Subsid.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>