src/objects/Account/fields/Company_number__c.field-meta.xml
<CustomField>
    <fullName>Company_number__c</fullName>
    <description>these are the company numbers that the account is located in based on Glovia</description>
    <inlineHelpText>Company account number that Account was created under.  
01  is Dallas
02  is Germany</inlineHelpText>
    <label>Company number</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>