src/objects/Account/fields/Cust_Site_Id__c.field-meta.xml
<CustomField>
    <fullName>Cust_Site_Id__c</fullName>
    <label>Cust Site Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>