src/objects/Account/fields/Customer_Industry__c.field-meta.xml
<CustomField>
    <fullName>Customer_Industry__c</fullName>
    <label>Customer Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Market_Segment</valueSetName>
    </valueSet>
</CustomField>