src/objects/Account/fields/Customer_Industry_Deprecated__c.field-meta.xml
<CustomField>
    <fullName>Customer_Industry_Deprecated__c</fullName>
    <label>Customer Industry Deprecated</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aerospace &amp; Defense</fullName>
            </value>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Consumer Electronics</fullName>
            </value>
            <value>
                <fullName>Education and Research Institute</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Environmental</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Food &amp; Beverage</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Life Sciences</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Optical Communications - Datacom</fullName>
            </value>
            <value>
                <fullName>Optical Communications - Telecom</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Semiconductor Capital Equip.</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Wireless</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>