src/objects/Account/fields/Customer_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Customer_Warranty__c</fullName>
    <inlineHelpText>Warranty is specific to this account and may not apply to all underneath accounts in the hierarchy</inlineHelpText>
    <label>Customer Warranty (In Months)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>