src/objects/Account/fields/Default_Named_Place__c.field-meta.xml
<CustomField>
    <fullName>Default_Named_Place__c</fullName>
    <inlineHelpText>Default IncoTerms2 field from SAP Customer Data</inlineHelpText>
    <label>Default Named Place</label>
    <length>28</length>
    <type>Text</type>
</CustomField>