src/objects/Account/fields/Default_Ship_Method__c.field-meta.xml
<CustomField>
    <fullName>Default_Ship_Method__c</fullName>
    <description>&quot;Incoterms2&quot; field from SAP.</description>
    <label>Default Ship Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>