src/objects/Account/fields/Default_Shipping_Comments__c.field-meta.xml
<CustomField>
    <fullName>Default_Shipping_Comments__c</fullName>
    <inlineHelpText>Text will AutoPopulate Shipping Comments on Opp when using New Opp With Data button</inlineHelpText>
    <label>Default Shipping Comments</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>