src/objects/Account/fields/Delivery_Terms__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Terms__c</fullName>
    <label>Standard Delivery Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>