src/objects/Account/fields/Derived_Region__c.field-meta.xml
<CustomField>
    <fullName>Derived_Region__c</fullName>
    <label>Derived Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Group_Level_Region</valueSetName>
    </valueSet>
</CustomField>