src/objects/Account/fields/Display_Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Display_Billing_Country__c</fullName>
    <label>Display Billing Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ISO_Countries</valueSetName>
    </valueSet>
</CustomField>