src/objects/Account/fields/EC__c.field-meta.xml
<CustomField>
    <fullName>EC__c</fullName>
    <label>EC</label>
    <length>150</length>
    <type>Text</type>
</CustomField>