src/objects/Account/fields/End_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_Number__c</fullName>
    <label>End Customer Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>