src/objects/Account/fields/ERP_Segment_Number__c.field-meta.xml
<CustomField>
    <fullName>ERP_Segment_Number__c</fullName>
    <description>Segment number pulled from the ERP system. Can have multiple values - helps set accessibility.</description>
    <label>ERP Segment Number</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>44</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>17</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>