src/objects/Account/fields/Exception__c.field-meta.xml
<CustomField>
    <fullName>Exception__c</fullName>
    <formula>IF( ISBLANK(Customer_Warranty__c) , IF(LEN( Parent.Customer_Warranty__c )&gt;2,true,false)
, IF(LEN( Customer_Warranty__c )&gt;2,true,false))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exception</label>
    <type>Checkbox</type>
</CustomField>