src/objects/Account/fields/First_Laser_Added__c.field-meta.xml
<CustomField>
    <fullName>First_Laser_Added__c</fullName>
    <description>The date of the first laser added to an Account</description>
    <label>First Laser Added</label>
    <summarizedField>Equipment_Owned__c.CreatedDate</summarizedField>
    <summaryForeignKey>Equipment_Owned__c.Account__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>