src/objects/Account/fields/Fiscal_Code__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Code__c</fullName>
    <label>Fiscal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>