src/objects/Account/fields/Global_Parent_Previous_Owner__c.field-meta.xml
<CustomField>
    <fullName>Global_Parent_Previous_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Global Parent Previous Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>