src/objects/Account/fields/Global_Parent_Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Global_Parent_Unique_Key__c</fullName>
    <label>Global Parent Unique Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>