src/objects/Account/fields/Global_Parent_Updated__c.field-meta.xml
<CustomField>
    <fullName>Global_Parent_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Global Parent Updated</label>
    <type>Checkbox</type>
</CustomField>