src/objects/Account/fields/Global_Ultimate_Account_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Global_Ultimate_Account_Change_Date__c</fullName>
    <label>Global Ultimate Account Change Date</label>
    <type>DateTime</type>
</CustomField>