src/objects/Account/fields/Global_Ultimate_Parent__c.field-meta.xml
<CustomField>
    <fullName>Global_Ultimate_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Global Ultimate Parent</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match a Global Parent Account.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Global Parent</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>