src/objects/Account/fields/Global_Ultimate_Parent_Owner_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Global_Ultimate_Parent_Owner_Change_Date__c</fullName>
    <label>Global Ultimate Parent Owner Change Date</label>
    <type>DateTime</type>
</CustomField>