src/objects/Account/fields/Glovia_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Glovia_Account_ID__c</fullName>
    <description>Glovia Account ID</description>
    <externalId>true</externalId>
    <inlineHelpText>Glovia Account ID</inlineHelpText>
    <label>Glovia Account ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>