src/objects/Account/fields/Glovia_Region__c.field-meta.xml
<CustomField>
    <fullName>Glovia_Region__c</fullName>
    <description>Office location that a Sale originated from.</description>
    <inlineHelpText>MID = Dallas
MIE = Europe
MIA = Asia
MIJ = Japan</inlineHelpText>
    <label>Glovia Region</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Glovia_Region_Country__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>MIA</fullName>
            </value>
            <value>
                <fullName>MID</fullName>
            </value>
            <value>
                <fullName>MIE</fullName>
            </value>
            <value>
                <fullName>MIJ</fullName>
            </value>
            <value>
                <fullName>HOUSE (80)</fullName>
            </value>
            <value>
                <fullName>II-VI (Internal)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>