src/objects/Account/fields/GrandParentId__c.field-meta.xml
<CustomField>
    <fullName>GrandParentId__c</fullName>
    <formula>Parent.Parent.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GrandParentId</label>
    <type>Text</type>
</CustomField>