src/objects/Account/fields/GRAX_Universal__c.field-meta.xml
<CustomField>
    <fullName>GRAX_Universal__c</fullName>
    <externalId>true</externalId>
    <label>GRAX Universal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>