src/objects/Account/fields/Group_Level_Region__c.field-meta.xml
<CustomField>
    <fullName>Group_Level_Region__c</fullName>
    <label>Group Level Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Group_Level_Region</valueSetName>
    </valueSet>
</CustomField>