src/objects/Account/fields/Highyag_VAT_Rate__c.field-meta.xml
<CustomField>
    <fullName>Highyag_VAT_Rate__c</fullName>
    <label>Highyag VAT Rate</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>