src/objects/Account/fields/II_VI_Revenue__c.field-meta.xml
<CustomField>
    <fullName>II_VI_Revenue__c</fullName>
    <label>II-VI Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>