src/objects/Account/fields/In_Use_Fiber_Lasers__c.field-meta.xml
<CustomField>
    <fullName>In_Use_Fiber_Lasers__c</fullName>
    <description>Count of In Use Fiber Lasers</description>
    <inlineHelpText>Count of In Use Fiber Lasers</inlineHelpText>
    <label>In Use Fiber Lasers</label>
    <summaryFilterItems>
        <field>Equipment_Owned__c.Laser_Type__c</field>
        <operation>equals</operation>
        <value>Fiber</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Equipment_Owned__c.Laser_Status__c</field>
        <operation>equals</operation>
        <value>In Use</value>
    </summaryFilterItems>
    <summaryForeignKey>Equipment_Owned__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>