src/objects/Account/fields/In_Use_Laser_Systems__c.field-meta.xml
<CustomField>
    <fullName>In_Use_Laser_Systems__c</fullName>
    <inlineHelpText>Roll-up of &quot;In Use&quot; Laser Systems at the Account.  (Note: Duplicate names indicate multiple In Use Lasers.)</inlineHelpText>
    <label>In Use Laser Systems</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>