src/objects/Account/fields/Japan_Aftermarket_ID__c.field-meta.xml
<CustomField>
    <fullName>Japan_Aftermarket_ID__c</fullName>
    <label>Japan Aftermarket ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>