src/objects/Account/fields/Japan_INXSYS_ID__c.field-meta.xml
<CustomField>
    <fullName>Japan_INXSYS_ID__c</fullName>
    <label>Japan INXSYS ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>