src/objects/Account/fields/Key_Account__c.field-meta.xml
<CustomField>
    <fullName>Key_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Call Center will assign leads from key accounts directly to Account Manager.</inlineHelpText>
    <label>Key Account</label>
    <type>Checkbox</type>
</CustomField>