src/objects/Account/fields/Key_AccountFormula__c.field-meta.xml
<CustomField>
    <fullName>Key_AccountFormula__c</fullName>
    <formula>Global_Ultimate_Parent__r.Key_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key Account</label>
    <type>Checkbox</type>
</CustomField>