src/objects/Account/fields/Lasers__c.field-meta.xml
<CustomField>
    <fullName>Lasers__c</fullName>
    <inlineHelpText>Gives the number of &quot;In Use&quot; lasers owned by this Account.</inlineHelpText>
    <label>Lasers</label>
    <summaryFilterItems>
        <field>Equipment_Owned__c.Laser_Status__c</field>
        <operation>equals</operation>
        <value>In Use</value>
    </summaryFilterItems>
    <summaryForeignKey>Equipment_Owned__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>